style(Node Authoring): Collapse top UI elements - Fix NodeIcon chooser styles - Fix form field without hint styles #1351

--- a/src/assets/wise5/vle/node-icon/node-icon.component.scss
+++ b/src/assets/wise5/vle/node-icon/node-icon.component.scss
@@ -5,7 +5,8 @@
 
 .mat-mdc-button {
   text-transform: none;
-  padding: 0;
+  padding: 8px;
+  height: 100%;
 }
 
 /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
