--- a/src/style/components/_inputs.scss
+++ b/src/style/components/_inputs.scss
@@ -39,13 +39,8 @@
 }
 
 .form-field-no-hint {
-  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
-  .mat-form-field-wrapper {
-    padding-bottom: 0;
-  }
-  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
-  .mat-form-field-underline {
-    bottom: 0;
+  .mat-mdc-form-field-subscript-wrapper {
+    display: none;
   }
 }
 
